force-app/main/default/objects/Welcome_Call_Questionnaire__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;TH&quot;</defaultValue>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KH</fullName>
                <label>Cambodia</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <label>Laos</label>
            </value>
            <value>
                <fullName>TH</fullName>
                <label>Thailand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>