force-app/main/default/objects/Welcome_Call_Questionnaire__c/fields/Questionnaire_Key__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Key__c</fullName>
    <displayFormat>QM-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Questionnaire Key</label>
    <type>AutoNumber</type>
</CustomField>