force-app/main/default/objects/Welcome_Call_Questionnaire__c/fields/Questionnaire_Label__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Label__c</fullName>
    <label>Questionnaire Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>