force-app/main/default/objects/Welcome_Call_Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Questionnaire_Label__c</columns>
    <columns>Answer_Type__c</columns>
    <columns>Answer_Value__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>